--- a/src/search_engine_crawler/Makefile
+++ b/src/search_engine_crawler/Makefile
@@ -1,6 +1,9 @@
 DOCKER_IMAGE_NAME       ?= ${USER_NAME}/$(shell basename `pwd`)
 #DOCKER_IMAGE_TAG        ?= $(subst /,-,$(shell git rev-parse --abbrev-ref HEAD))
 DOCKER_IMAGE_TAG ?= $(shell git log -1 --pretty=%h)
+DOCK_BUILD=docker build -t
+
+all: test coverage
 
 dependencies:
 	@echo ">> Installing dependencies"
@@ -10,9 +13,15 @@ test: dependencies
 	@echo ">> Running tests"
 	@python -m unittest discover -s tests/
 
+coverage:
+	@coverage run -m unittest discover -s tests/
+	@coverage report --include crawler/crawler.py
+
 build:
 	@echo ">> Building Docker Image for Crawler Component"
-	@docker build -t "$(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)" .
-	@docker build -t "$(DOCKER_IMAGE_NAME):latest" .
+	$(DOCK_BUILD) "$(DOCKER_IMAGE_NAME):$(DOCKER_IMAGE_TAG)" .
+	$(DOCK_BUILD) "$(DOCKER_IMAGE_NAME):latest" .
+
+# @TODO: Build latest image just in master branch
 
 .PHONY: all dependencies test builds
