feat(helm): set new hostname

--- a/kubernetes/Charts/grafana/values.yaml
+++ b/kubernetes/Charts/grafana/values.yaml
@@ -91,7 +91,7 @@ ingress:
   labels: {}
   path: /
   hosts:
-    - search-engine-grafana
+    - search-engine-app.io
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
