--- a/kubernetes/Charts/gitlab/values.yaml
+++ b/kubernetes/Charts/gitlab/values.yaml
@@ -34,7 +34,7 @@ global:
     allowClusterRoles: true
   ## doc/charts/globals.md#configure-host-settings
   hosts:
-    domain: crawler-app.io
+    domain: search-engine-app.io
     # hostSuffix:
     https: false
     externalIP:
