feat(k8s): add liveness and readiness probes

--- a/kubernetes/Charts/crawler/templates/deployment.yaml
+++ b/kubernetes/Charts/crawler/templates/deployment.yaml
@@ -26,9 +26,19 @@ spec:
       - image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         name: {{ template "crawler.fullname" . }}
         ports:
-        - containerPort: {{ .Values.service.internalPort }}
-          name: {{ template "crawler.fullname" . }}
+        - name: crawler
+          containerPort: {{ .Values.service.internalPort }}
           protocol: TCP
+        readinessProbe:
+          tcpSocket:
+            port: crawler
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: crawler
+          initialDelaySeconds: 15
+          periodSeconds: 20
         env:
         - name: MONGO
           value: {{ .Values.databaseHost | default (printf "%s-mongodb" .Release.Name) }}
